# job_admin

./: .env.temlpate  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  supervisord.conf  test_q2.py
.github/workflows/: docker-publish.yml
core/: settings.py  urls.py
tasks/: jobs.py
